--- a/cms_embed_test/index.html
+++ b/cms_embed_test/index.html
@@ -7,7 +7,7 @@
 		<title>CMS Embed Test</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="animation1"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
