sticky test added

--- a/cms_embed_test/index.html
+++ b/cms_embed_test/index.html
@@ -7,7 +7,12 @@
 		<title>CMS Embed Test</title>
 	</head>
 	<body>
-		<div id="animation1"></div>
+		<div style="width: 100vw; height: 50rem; background-color: gray"></div>
+		<div>
+			<div><div id="animation1"></div></div>
+		</div>
+
+		<div style="width: 100vw; height: 50rem; background-color: gray"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
